fix(right-side): show pseudo field on mobile

--- a/src/app/doc/doc.component.scss
+++ b/src/app/doc/doc.component.scss
@@ -12,7 +12,7 @@ md-sidenav-container {
   .rightsidenav {
     box-shadow: none;
     background-color: $color-bg !important;
-    min-width: 30rem;
-    max-width: 30rem;
+    min-width: 25rem;
+    max-width: 25rem;
   }
 }
